2006-02-14  Sven Panne  <sven.panne@aedion.de>

	* src/al_source.c, src/al_source.h, src/alc/alc_speaker.c,
	src/alc/alc_speaker.h: Made _alSourceIsParamSet and _alcSpeakerInit
	static.

	* src/al_source.c: Removed the obscure "2D sound hack", which set the
	direction and cone source attributes back to their default values when
	AL_SOURCE_RELATIVE was set to AL_TRUE and the source's position was at
	the origin. This is against the OpenAL spec and if some old games are
	buggy (Tribes 2?), then they should be fixed or they should ship with a
	special OpenAL version.

	* configure.ac: Removed -Wunreachable-code from the set of warning
	options in effect when --enable-more-warnings is given. It leads to more
	trouble than it's worth and hides more critical warnings in tons of
	useless false positives.

2006-02-13  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/al_main.c: Use code to from freealut to implement
	_alMicroSleep in a nicer way. Dropped MorphOS support here, as nobody
	seems to be able to maintain it anymore.

	* admin/autotools/m4/alut_check_func.m4: Added.

2006-02-13  Prakash Punnoor <prakash@punnoor.de>

	* src/al_matrix.c, src/al_matrix.h: add _alVecMatrixMulA3; deactivate
	remaining code, as it is unused
	
	* src/alc/alc_speaker.c: use arrays and _alVecMatrixMulA3 instead of
	ALmatrix and co.
	
	* CMakeLists.txt: support new _alMicroSleep code
	
	* admin/CMakeModules/FindSleepFunction.cmake: added

2006-02-05  Prakash Punnoor <prakash@punnoor.de>

	* admin/pkgconfig/openal.pc.in: also include pthread related flags -
	the lib flags shouldn't be needed though and the acx_pthread.m4 macro
	should be fixed though, so that openal itself gets linked to pthread;
	reverting last this patch, as acx_pthread hopefully got a work-around
	for Linux
	
	* admin/pkgconfig/openal-config.in: commenting out pthread related flags,
	as openal should be built that way that apps linking to openal shouldn't
	know anything about it (unless in static case)
	